// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-1b29sq2-Text"
  >
    Test
  </div>
</div>
`;

exports[`Text component should match snapshot with default props 1`] = `
<div>
  <div
    class="css-3vy6se-Text"
  >
    test
  </div>
</div>
`;
